performance chart html

--- a/index.html
+++ b/index.html
@@ -74,11 +74,31 @@
 
             <div class="performance-chart">
                 <div class="chart-controls">
-                    <button class="chart-control active">1D</button>
-                    <button class="chart-control">1W</button>
-                    <button class="chart-control">1M</button>
-                    <button class="chart-control">1Y</button>
+                    <button class="chart-control active" data-period="1D">1D</button>
+                    <button class="chart-control" data-period="1W">1W</button>
+                    <button class="chart-control" data-period="1M">1M</button>
+                    <button class="chart-control" data-period="1Y">1Y</button>
                 </div>
+                <div class="chart-container">
+                    <div class="chart-tooltip" style="display: none;">
+                        <div class="tooltip-date"></div>
+                        <div class="tooltip-value"></div>
+                    </div>
+                    <svg class="chart-svg" width="100%" height="300" preserveAspectRatio="none">
+                        <defs>
+                            <linearGradient id="lineGradient" x1="0" y1="0" x2="0" y2="1">
+                                <stop offset="0%" stop-color="#4B56D2" stop-opacity="0.2"/>
+                                <stop offset="100%" stop-color="#4B56D2" stop-opacity="0"/>
+                            </linearGradient>
+                        </defs>
+                        <g class="grid-lines"></g>
+                        <g class="axis-labels"></g>
+                        <path class="chart-line" stroke="#4B56D2" stroke-width="2" fill="none"/>
+                        <path class="chart-area" fill="url(#lineGradient)"/>
+                        <g class="hover-points"></g>
+                    </svg>
+                </div>
+            </div>
                 <div id="chartContainer">
                     <svg width="100%" height="300" style="stroke: var(--accent-color); fill: none;">
                         <path d="M0,150 C100,100 200,200 300,50 C400,150 500,100 600,150 C700,200 800,150 900,100" 
