--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <svg class="header-pattern" width="100%" height="100%" preserveAspectRatio="none">
+        <defs>
+            <pattern id="subtle-pattern" width="100" height="100" patternUnits="userSpaceOnUse">
+                <path d="M0 50 Q25 25, 50 50 T100 50" fill="none" stroke="rgba(74, 86, 210, 0.1)" stroke-width="0.5"/>
+                <path d="M0 25 Q25 0, 50 25 T100 25" fill="none" stroke="rgba(74, 86, 210, 0.07)" stroke-width="0.5"/>
+                <path d="M0 75 Q25 50, 50 75 T100 75" fill="none" stroke="rgba(74, 86, 210, 0.05)" stroke-width="0.5"/>
+            </pattern>
+        </defs>
+        <rect width="100%" height="100%" fill="url(#subtle-pattern)"/>
+    </svg>
     <header>
         <div class="container nav-container">
             <a href="#" class="logo">
@@ -39,6 +49,7 @@
     </div>
 
     <section class="hero">
+        <div class="hero-pattern-overlay"></div>
         <div class="container hero-content">
             <h1>AI-Powered Investment Intelligence</h1>
             <p>Experience the future of investment management through advanced artificial intelligence and machine learning.</p>
