--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </a>
             <nav>
                 <a href="#about" class="btn">Explore</a>
+                <a href="dashboard.html" class="btn">Dashboard</a>
             </nav>
         </div>
     </header>
