--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
     </section>
 
     <section class="tokenomics">
+        <div class="container">
                 <h3>Tokenomics</h3>
                 <p>AegisAI Coin is built on the Ethereum (ERC-20) blockchain, with a total supply of 100 million tokens.</p>
                 <ul>
