--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <h2>Leadership</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="/api/placeholder/120/120" alt="Team Member">
+                    <img src="/src/supawork-image-20250124T230356977Z.png.png" alt="Team Member">
                     <h3>Alex Chen</h3>
                     <p>Chief Technology Officer</p>
                 </div>
