--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2265.14 537.69">
+                    <div class="logofooter">
+                     <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2265.14 537.69">
                         <defs>
                           <style>
                             .cls-1 {
@@ -336,7 +337,8 @@
                             <path class="cls-1" d="M2121.7,156.79v-31.54h143.44v31.54h-143.44ZM2121.7,360.99v-31.54h143.44v31.54h-143.44ZM2175.99,360.99V125.25h34.53v235.74h-34.53Z"/>
                           </g>
                         </g>
-                      </svg>
+                     </svg>
+                    </div>
                     <p>Next generation AI investment platform</p>
                 </div>
                 <div class="social-links">
