--- a/index.html
+++ b/index.html
@@ -258,17 +258,17 @@
             <h2>Leadership</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="/src/supawork-image-20250124T230356977Z.png.png" alt="Team Member">
+                    <img src="/src/Firefly Alex Chen IT Manager 67876.jpg" alt="Team Member">
                     <h3>Alex Chen</h3>
                     <p>Chief Technology Officer</p>
                 </div>
                 <div class="team-member">
-                    <img src="/api/placeholder/120/120" alt="Team Member">
+                    <img src="/src/Firefly Sarah Park Head of AI Strategy 7463 (1).jpg" alt="Team Member">
                     <h3>Sarah Park</h3>
                     <p>Head of AI Strategy</p>
                 </div>
                 <div class="team-member">
-                    <img src="/api/placeholder/120/120" alt="Team Member">
+                    <img src="/src/Firefly David Kumar Investment Director 40912.jpg" alt="Team Member">
                     <h3>David Kumar</h3>
                     <p>Investment Director</p>
                 </div>
