--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h2>Leadership</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="/src/alex.jpg" alt="Team Member">
+                    <img src="/src/Alex.jpg" alt="Team Member">
                     <h3>Alex Chen</h3>
                     <p>Chief Technology Officer</p>
                 </div>
