--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
             </div>
     </section>
     
+    <section id="whitepaper-download" class="whitepaper-section">
+        <div class="container">
+          <h2>Download Our Whitepaper</h2>
+          <p>Discover all the details about AegisAI Coin, our technology, and our roadmap in the whitepaper.</p>
+          <button id="download-whitepaper" class="btn">Download Whitepaper</button>
+        </div>
+    </section>
+      
+
     <section id="stats">
         <div class="container">
             <h2>Live Performance</h2>
