--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
         <div class="container">
             <h2>FAQ</h2>
             <div class="faq-item">
-                <div class="faq-question">How does Eaglets use AI in investment decisions?</div>
+                <div class="faq-question">How does Aegis use AI in investment decisions?</div>
                 <div class="faq-answer">Our AI systems analyze vast amounts of market data, identifying patterns and opportunities through advanced machine learning algorithms.</div>
             </div>
             <div class="faq-item">
-                <div class="faq-question">What makes Eaglets different from traditional investment platforms?</div>
-                <div class="faq-answer">Eaglets combines cutting-edge AI technology with traditional investment expertise to deliver superior results and real-time portfolio optimization.</div>
+                <div class="faq-question">What makes Aegis different from traditional investment platforms?</div>
+                <div class="faq-answer">Aegis combines cutting-edge AI technology with traditional investment expertise to deliver superior results and real-time portfolio optimization.</div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">How secure is the platform?</div>
@@ -350,9 +350,9 @@
                     <p>Next generation AI investment platform</p>
                 </div>
                 <div class="social-links">
-                    <a href="#" aria-label="LinkedIn">LinkedIn</a>
-                    <a href="#" aria-label="Twitter">Twitter</a>
-                    <a href="#" aria-label="GitHub">GitHub</a>
+                    <a href="#" aria-label="Telegram">Telegram</a>
+                    <a href="https://x.com/aegis97757" aria-label="Twitter">Twitter</a>
+                    <a href="https://github.com/AegisAiCoin/AegisAI-Bot" aria-label="GitHub">GitHub</a>
                 </div>
             </div>
         </div>
