--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eaglets Dashboard - AI Investment Platform</title>
+    <title>Aegis AI Dashboard - Experience the future of investment management</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/space-grotesk/2.0.0/space-grotesk.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
