--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
         <div class="container nav-container">
-            <a href="https://aegisaicoin.com/index.html" class="logo">
+            <a href="https://aegisaicoin.com" class="logo">
                 <svg id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2265.14 537.69">
                     <defs>
                       <style>
