--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
     </section>
     
     <section id="whitepaper-download" class="whitepaper-section">
+        <div id="3d-viewer"></div>
         <div class="container">
           <h2>Download Our Whitepaper</h2>
           <p>Discover all the details about AegisAI Coin, our technology, and our roadmap in the whitepaper.</p>
@@ -357,7 +358,9 @@
             </div>
         </div>
     </footer>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r146/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
