--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </section>
     
     <section id="whitepaper-download" class="whitepaper-section">
-        <div id="3d-viewer"></div>
+        <div id="3dviewer"></div>
         <div class="container">
           <h2>Download Our Whitepaper</h2>
           <p>Discover all the details about AegisAI Coin, our technology, and our roadmap in the whitepaper.</p>
