--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container hero-content">
             <h1>AI-Powered Investment Intelligence</h1>
             <p>Experience the future of investment management through advanced artificial intelligence and machine learning.</p>
-            <a href="#contact" class="btn">Get Started</a>
+            <a href="/dashboard.html" class="btn">Get Started</a>
         </div>
     </section>
 
@@ -201,7 +201,7 @@
     <section class="tokenomics">
         <div class="container">
                 <h3>Tokenomics</h3>
-                <p>AegisAI Coin is built on the Ethereum (ERC-20) blockchain, with a total supply of 100 million tokens.</p>
+                <p>AegisAI Coin is built on the Solana (SPL) blockchain, with a total supply of 100 million tokens.</p>
                 <ul>
                     <li>
                         <strong>Public Sale:</strong>
